--- a/File1.ipynb
+++ b/File1.ipynb
@@ -184,6 +184,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task2\n",
+    "----------------\n",
+    "Write code to unit normalize both (feature) vectors and compute the cosine similarity among them. Please comment does it make sense to compute the cosine similarity among the feature vectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalised Petal Length:  [0.06779661016949151, 0.05084745762711865, 0.0847457627118644, 0.06779661016949151, 0.11864406779661016, 0.06779661016949151, 0.0847457627118644, 0.06779661016949151, 0.0847457627118644, 0.0847457627118644, 0.1016949152542373, 0.06779661016949151, 0.016949152542372895, 0.033898305084745756, 0.0847457627118644, 0.05084745762711865, 0.06779661016949151, 0.11864406779661016, 0.0847457627118644, 0.11864406779661016, 0.0847457627118644, 0.0, 0.11864406779661016, 0.15254237288135591, 0.1016949152542373, 0.1016949152542373, 0.0847457627118644, 0.06779661016949151, 0.1016949152542373, 0.1016949152542373, 0.0847457627118644, 0.0847457627118644, 0.06779661016949151, 0.0847457627118644, 0.033898305084745756, 0.05084745762711865, 0.0847457627118644, 0.05084745762711865, 0.0847457627118644, 0.05084745762711865, 0.05084745762711865, 0.05084745762711865, 0.1016949152542373, 0.15254237288135591, 0.06779661016949151, 0.1016949152542373, 0.06779661016949151, 0.0847457627118644, 0.06779661016949151, 0.6271186440677966, 0.5932203389830508, 0.6610169491525424, 0.5084745762711864, 0.6101694915254237, 0.5932203389830508, 0.6271186440677966, 0.38983050847457623, 0.6101694915254237, 0.4915254237288135, 0.423728813559322, 0.5423728813559322, 0.5084745762711864, 0.6271186440677966, 0.4406779661016949, 0.576271186440678, 0.5932203389830508, 0.5254237288135593, 0.5932203389830508, 0.4915254237288135, 0.6440677966101694, 0.5084745762711864, 0.6610169491525424, 0.6271186440677966, 0.559322033898305, 0.576271186440678, 0.6440677966101694, 0.6779661016949152, 0.5932203389830508, 0.423728813559322, 0.47457627118644063, 0.4576271186440678, 0.4915254237288135, 0.6949152542372881, 0.5932203389830508, 0.5932203389830508, 0.6271186440677966, 0.576271186440678, 0.5254237288135593, 0.5084745762711864, 0.576271186440678, 0.6101694915254237, 0.5084745762711864, 0.38983050847457623, 0.5423728813559322, 0.5423728813559322, 0.5423728813559322, 0.559322033898305, 0.3389830508474576, 0.5254237288135593, 0.847457627118644, 0.6949152542372881, 0.8305084745762712, 0.7796610169491525, 0.8135593220338982, 0.9491525423728813, 0.5932203389830508, 0.8983050847457626, 0.8135593220338982, 0.8644067796610169, 0.6949152542372881, 0.7288135593220338, 0.7627118644067796, 0.6779661016949152, 0.6949152542372881, 0.7288135593220338, 0.7627118644067796, 0.9661016949152542, 1.0, 0.6779661016949152, 0.7966101694915254, 0.6610169491525424, 0.9661016949152542, 0.6610169491525424, 0.7966101694915254, 0.847457627118644, 0.6440677966101694, 0.6610169491525424, 0.7796610169491525, 0.8135593220338982, 0.8644067796610169, 0.9152542372881356, 0.7796610169491525, 0.6949152542372881, 0.7796610169491525, 0.8644067796610169, 0.7796610169491525, 0.7627118644067796, 0.6440677966101694, 0.7457627118644068, 0.7796610169491525, 0.6949152542372881, 0.6949152542372881, 0.8305084745762712, 0.7966101694915254, 0.711864406779661, 0.6779661016949152, 0.711864406779661, 0.7457627118644068, 0.6949152542372881]\n",
+      "Normalised Petal Width:  [0.04166666666666667, 0.04166666666666667, 0.04166666666666667, 0.04166666666666667, 0.12500000000000003, 0.08333333333333333, 0.04166666666666667, 0.04166666666666667, 0.0, 0.04166666666666667, 0.04166666666666667, 0.0, 0.0, 0.04166666666666667, 0.12500000000000003, 0.12500000000000003, 0.08333333333333333, 0.08333333333333333, 0.08333333333333333, 0.04166666666666667, 0.12500000000000003, 0.04166666666666667, 0.16666666666666669, 0.04166666666666667, 0.04166666666666667, 0.12500000000000003, 0.04166666666666667, 0.04166666666666667, 0.04166666666666667, 0.04166666666666667, 0.12500000000000003, 0.0, 0.04166666666666667, 0.0, 0.04166666666666667, 0.04166666666666667, 0.0, 0.04166666666666667, 0.04166666666666667, 0.08333333333333333, 0.08333333333333333, 0.04166666666666667, 0.20833333333333334, 0.12500000000000003, 0.08333333333333333, 0.04166666666666667, 0.04166666666666667, 0.04166666666666667, 0.04166666666666667, 0.5416666666666666, 0.5833333333333334, 0.5833333333333334, 0.5, 0.5833333333333334, 0.5, 0.625, 0.375, 0.5, 0.5416666666666666, 0.375, 0.5833333333333334, 0.375, 0.5416666666666666, 0.5, 0.5416666666666666, 0.5833333333333334, 0.375, 0.5833333333333334, 0.4166666666666667, 0.7083333333333334, 0.5, 0.5833333333333334, 0.4583333333333333, 0.5, 0.5416666666666666, 0.5416666666666666, 0.6666666666666666, 0.5833333333333334, 0.375, 0.4166666666666667, 0.375, 0.4583333333333333, 0.625, 0.5833333333333334, 0.625, 0.5833333333333334, 0.5, 0.5, 0.5, 0.4583333333333333, 0.5416666666666666, 0.4583333333333333, 0.375, 0.5, 0.4583333333333333, 0.5, 0.5, 0.4166666666666667, 0.5, 1.0, 0.75, 0.8333333333333334, 0.7083333333333334, 0.8750000000000001, 0.8333333333333334, 0.6666666666666666, 0.7083333333333334, 0.7083333333333334, 1.0, 0.7916666666666666, 0.75, 0.8333333333333334, 0.7916666666666666, 0.9583333333333333, 0.9166666666666666, 0.7083333333333334, 0.8750000000000001, 0.9166666666666666, 0.5833333333333334, 0.9166666666666666, 0.7916666666666666, 0.7916666666666666, 0.7083333333333334, 0.8333333333333334, 0.7083333333333334, 0.7083333333333334, 0.7083333333333334, 0.8333333333333334, 0.625, 0.75, 0.7916666666666666, 0.8750000000000001, 0.5833333333333334, 0.5416666666666666, 0.9166666666666666, 0.9583333333333333, 0.7083333333333334, 0.7083333333333334, 0.8333333333333334, 0.9583333333333333, 0.9166666666666666, 0.75, 0.9166666666666666, 1.0, 0.9166666666666666, 0.75, 0.7916666666666666, 0.9166666666666666, 0.7083333333333334]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "# Making a Function to normalise both Lists\n",
+    "def Normalise_List(my_list):\n",
+    "    normalised = []\n",
+    "    list_Min = min(my_list)\n",
+    "    list_Max = max(my_list)\n",
+    "    for value in my_list:\n",
+    "        number = (value - list_Min) / (list_Max - list_Min)\n",
+    "        normalised.append(number)\n",
+    "    return normalised\n",
+    "        \n",
+    "\n",
+    "print('Normalised Petal Length: ',Normalise_List(datalist[0]))\n",
+    "print('Normalised Petal Width: ',Normalise_List(datalist[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making a Function to calculate Dot Product \n",
+    "def DotProduct(List1,List2):\n",
+    "    dot_prod = 0\n",
+    "    temp_prod = 0\n",
+    "    if len(List1) != len(List2):\n",
+    "        print('Try different lists.lists must be of same length.')\n",
+    "    for (val1,val2) in zip(List1,List2):\n",
+    "        temp_prod = val1 * val2\n",
+    "        dot_prod += temp_prod\n",
+    "    return dot_prod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making mathematical functions to help us in further calculations\n",
+    "def sqr_root(value):\n",
+    "    return value ** 0.5\n",
+    "def Calc_Magnitude(List1):\n",
+    "    summ = 0\n",
+    "    temp = 0\n",
+    "    for val in List1:\n",
+    "        temp = val ** 2\n",
+    "        summ += temp\n",
+    "    return sqr_root(summ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cosine Similarity: 0.9835062305846587\n",
+      "The Cosine Similarity of these features can help us know that how much a flower type is similar to each other with respect to Petal Length and Width & Sepal Length and Width\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The function below is to calculate Cosine Similarity\n",
+    "def Calc_CosineSimilarity(List1,List2):\n",
+    "    # Computing the Dot Product of both lists\n",
+    "    dotproduct = DotProduct(List1,List2)\n",
+    "    # Computing Magnitude of Petal Length and Petal Width\n",
+    "    magnitude_List1 = Calc_Magnitude(List1)\n",
+    "    magnitude_List2 = Calc_Magnitude(List2)\n",
+    "    # Using Above variables to calculate Cosine Similarity of Petal Length and Petal Width\n",
+    "    product_of_magnitude = magnitude_List1 * magnitude_List2\n",
+    "    cosine_similarity = dotproduct / product_of_magnitude\n",
+    "    return cosine_similarity\n",
+    "\n",
+    "print(f\"Cosine Similarity: {Calc_CosineSimilarity(datalist[0], datalist[1])}\")\n",
+    "print(\"The Cosine Similarity of these features can help us know that how much a flower type is similar to each other with respect to Petal Length and Width & Sepal Length and Width\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task3: Univariate Analysis\n",
+    "----------------\n",
+    "Lets model the petal length as a univariate bernoulli random variable by categorizing the petal length as short(< 4.9cm) and long(>=4.9cm). Write the code for finding the probability of a short petal length flower."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Petal Length Under 4.9 Cm:  [1.4, 1.3, 1.5, 1.4, 1.7, 1.4, 1.5, 1.4, 1.5, 1.5, 1.6, 1.4, 1.1, 1.2, 1.5, 1.3, 1.4, 1.7, 1.5, 1.7, 1.5, 1.0, 1.7, 1.9, 1.6, 1.6, 1.5, 1.4, 1.6, 1.6, 1.5, 1.5, 1.4, 1.5, 1.2, 1.3, 1.5, 1.3, 1.5, 1.3, 1.3, 1.3, 1.6, 1.9, 1.4, 1.6, 1.4, 1.5, 1.4, 4.7, 4.5, 4.0, 4.6, 4.5, 4.7, 3.3, 4.6, 3.9, 3.5, 4.2, 4.0, 4.7, 3.6, 4.4, 4.5, 4.1, 4.5, 3.9, 4.8, 4.0, 4.7, 4.3, 4.4, 4.8, 4.5, 3.5, 3.8, 3.7, 3.9, 4.5, 4.5, 4.7, 4.4, 4.1, 4.0, 4.4, 4.6, 4.0, 3.3, 4.2, 4.2, 4.2, 4.3, 3.0, 4.1, 4.5, 4.8, 4.8]\n",
+      "Petal Lengths Above or == 4.9 Cm:  [4.9, 4.9, 5.0, 5.1, 6.0, 5.1, 5.9, 5.6, 5.8, 6.6, 6.3, 5.8, 6.1, 5.1, 5.3, 5.5, 5.0, 5.1, 5.3, 5.5, 6.7, 6.9, 5.0, 5.7, 4.9, 6.7, 4.9, 5.7, 6.0, 4.9, 5.6, 5.8, 6.1, 6.4, 5.6, 5.1, 5.6, 6.1, 5.6, 5.5, 5.4, 5.6, 5.1, 5.1, 5.9, 5.7, 5.2, 5.0, 5.2, 5.4, 5.1]\n",
+      "Probability of Short Petal Length Flower:  0.6577181208053692\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "# Making a List of all Petal Lengths whichs comes under 4.9cm and above/== to 4.9\n",
+    "petalLength_under49 = []\n",
+    "petalLength_Above49 = []\n",
+    "for length1 in (datalist[0]):\n",
+    "    if length1 < 4.9:\n",
+    "        petalLength_under49.append(length1)\n",
+    "    \n",
+    "    if length1 >= 4.9:\n",
+    "        petalLength_Above49.append(length1)\n",
+    "print('Petal Length Under 4.9 Cm: ',petalLength_under49)\n",
+    "print('Petal Lengths Above or == 4.9 Cm: ',petalLength_Above49)\n",
+    "print('Probability of Short Petal Length Flower: ',(len(petalLength_under49)/len(datalist[0])))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
