--- a/File1.ipynb
+++ b/File1.ipynb
@@ -331,6 +331,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task4: Univariate Analysis\n",
+    "----------------\n",
+    "Lets consider that we randomly choose 20 flower, whats the probability that 15 among them will be short petal lenght ones ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# simple math function to help us in further calculations\n",
+    "def factorial(value):\n",
+    "    result = 1\n",
+    "    for i in range(1, value+1):\n",
+    "        result *= i\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write your code here\n",
+    "# Probability of a flower to have Short Petal Length is 0.6577181208053692\n",
+    "# The question involve the use of Binomial Probability because number of successes are known\n",
+    "# probability of success is also know \n",
+    "# (Total_Trials, successful_trial) = (Total_Trials! / (successful_trial! * (Total_Trials - successful_trial)!))\n",
+    "# above formula computes Binomial Coefficient\n",
+    "# Binomial Probability =\n",
+    "# Binomial Coefficient * (probability of success)^successful_trial * (probability of failure)^(Total_Trials-successful_trial)\n",
+    "def factorial(value):\n",
+    "    result = 1\n",
+    "    for i in range(1, value+1):\n",
+    "        result *= i\n",
+    "    return result\n",
+    "def binomialCoefficient(Total_Trials,Successful_Trials):\n",
+    "    bin_coeff = 0\n",
+    "    factorial_TotalTrials = factorial(Total_Trials) #Total_Trials!\n",
+    "    factorial_Successful_Trials = factorial(Successful_Trials) #successful_trial!\n",
+    "    Difference_Successful_Total_trial = Total_Trials - Successful_Trials #Total_Trials - successful_trial\n",
+    "    factorial_Diff_of_Trial_and_success = factorial(Difference_Successful_Total_trial) #(Total_Trials - successful_trial)!\n",
+    "    bin_coeff = factorial_TotalTrials / (factorial_Successful_Trials * factorial_Diff_of_Trial_and_success)\n",
+    "    return bin_coeff\n",
+    "\n",
+    "def Compute_Binomial_Probability(Total_Trials,Successful_Trials,Probability_of_Success):\n",
+    "    coeff = binomialCoefficient(Total_Trials,Successful_Trials)\n",
+    "    # below line is computing p^k\n",
+    "    prob_success_power_st = Probability_of_Success ** Successful_Trials\n",
+    "    # (1-p)^(n-k)\n",
+    "    prob_failure_power_ft = (1 - Probability_of_Success) ** (Total_Trials - Successful_Trials)\n",
+    "    binomial_probability = coeff * prob_success_power_st * prob_failure_power_ft\n",
+    "    return binomial_probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability: 0.13581896209442684\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now Finding Probability using the above functions\n",
+    "Total = 20\n",
+    "NumberofSuccess = 15\n",
+    "Success_prob = 0.6577181208053692\n",
+    "print(f\"Probability: {Compute_Binomial_Probability(Total, NumberofSuccess, Success_prob)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task5: Univariate Analysis\n",
+    "----------------\n",
+    "Lets model the petal Width as a univariate Bernoulli random variable by categorizing the petal width as short(< 1.6cm) and long(>=1.6cm). Write the code for finding the probability of a short petal width flower."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of Short Petal Width Flower:  0.6510067114093959\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "# Making a List of all Petal Widths which comes under 1.6cm and above/equal to 1.6\n",
+    "petalWidth_under16 = []\n",
+    "petalWidth_Above16 = []\n",
+    "for length1 in (datalist[1]):\n",
+    "    if length1 < 1.6:\n",
+    "        petalWidth_under16.append(length1)\n",
+    "    \n",
+    "    if length1 >= 1.6:\n",
+    "        petalWidth_Above16.append(length1)\n",
+    "# print('Petal Width Under 1.6 Cm: ',petalWidth_under16)\n",
+    "# print('Petal Width Above or equal to 1.6 Cm: ',petalWidth_Above16)\n",
+    "print('Probability of Short Petal Width Flower: ',(len(petalWidth_under16)/len(datalist[1])))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
