--- a/File1.ipynb
+++ b/File1.ipynb
@@ -462,6 +462,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making a Function Compute Standard Deviation and Variance\n",
+    "def Calc_Variance(List1,list_mean):\n",
+    "    var = 0\n",
+    "    temp = 0\n",
+    "    dif = 0\n",
+    "    squared_dif = 0\n",
+    "    for val in List1:\n",
+    "        dif = val - list_mean\n",
+    "        squared_dif = dif ** 2\n",
+    "        temp += squared_dif\n",
+    "    var = temp / (len(List1)-1)\n",
+    "    return var\n",
+    "def Calc_StandardDeviation(List1,Mean1):\n",
+    "    std = sqr_root(Calc_Variance(List1,Mean1))\n",
+    "    return std\n",
+    "# print(Calc_StandardDeviation(datalist[0],meann))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a Function to Compute Guassian PDF f(x)\n",
+    "e = 2.71828 \n",
+    "pi = 3.14159\n",
+    "def Calc_Guassian_PDF(x,Mean,Std):\n",
+    "    # working on Coefficient of e\n",
+    "    Denominator_value = sqr_root(2 * pi) * Std\n",
+    "    coeff = 1 / Denominator_value\n",
+    "    # working on power of e\n",
+    "    exp_power_numerator = (x-Mean)**2\n",
+    "    exp_power_denumerator = (2 * (Std**2))\n",
+    "    exp_power = - (exp_power_numerator / exp_power_denumerator)\n",
+    "    result = coeff * (e ** exp_power)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write your code here, use summation instead of integral, \n",
+    "# you are not authorized to use scipy.stats function for this and later parts...\n",
+    "\n",
+    "# Since we are not allowed to use external library\n",
+    "# I am going to Compute Integration of f(x) myself\n",
+    "# For this integration we will use \n",
+    "# Trapezoidal Rule of Integration\n",
+    "# which states that Integral f(x) from a to b\n",
+    "# is approximately equal to 1/2 * (Sum of Heights)  -->\n",
+    "# --> * (prependicular distance btw parallel lines)\n",
+    "# sum of Heights refers to value of f(x) at a and b respectively\n",
+    "# Sum of Heights = f(a) + f(b)\n",
+    "# Prependicular Dist btw parallel lines = b - a\n",
+    "# So, Integral f(x) from a to b = (b - a)/2 * (f(a)+f(b))\n",
+    "# in the below function count refers to the number of trapezoids that we divide the interval \n",
+    "# [𝑎,𝑏] into\n",
+    "def Integration_By_Trapezoidal(Gaussian_func,Lower_Bound,Upper_Bound,Mean,Std,count):\n",
+    "    # First step calculate width of each trapezoid\n",
+    "    trap_width = (Upper_Bound - Lower_Bound) / count\n",
+    "    sum_of_area = (1/2) * (Gaussian_func(Lower_Bound,Mean,Std) + Gaussian_func(Upper_Bound,Mean,Std))\n",
+    "    \n",
+    "    # now we will run a loop for all sub intervals \n",
+    "    for interval in range(1,count):\n",
+    "        # for each interval we will calculate the area of trapezoid\n",
+    "        # and add it to sum_of_area\n",
+    "        # Lower bound over here is the start of the interval\n",
+    "        # interval * trap_width\n",
+    "        # here interval is the current index in loop\n",
+    "        # which goes uptil count - 1\n",
+    "        # trap_width is step size, which represents the distance between \n",
+    "        # consecutive points on the x-axis (the width of each trapezoid)\n",
+    "        # hence interval * trap_width moves you interval steps from the Lower Bound\n",
+    "        # spacing each point by trap width\n",
+    "        temp = Lower_Bound + interval * trap_width\n",
+    "        # then evaluating the Gaussian pdf value at temp point\n",
+    "        sum_of_area += Gaussian_func(temp,Mean,Std)\n",
+    "        # sum represents the height of trapezoids \n",
+    "        # (function values at different points along the x-axis).\n",
+    "        \n",
+    "    # Each trapezoid's area is calculated as height×width\n",
+    "    # as we got the height now we will multiply it with the trap width\n",
+    "    sum_of_area = sum_of_area * trap_width \n",
+    "    # now return the integrated function value\n",
+    "    return sum_of_area\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of a flower with Petal Length \n",
+      "in the range [5.6, 5.7] is Approx.\n",
+      "0.012847248561017953\n"
+     ]
+    }
+   ],
+   "source": [
+    "Petal_length_Mean = meann\n",
+    "Petal_length_Std = Calc_StandardDeviation(datalist[0],Petal_length_Mean)\n",
+    "Lower_Bound = 5.6\n",
+    "Upper_Bound = 5.7\n",
+    "Number_of_trapezoid = 1000\n",
+    "Prob = Integration_By_Trapezoidal(Calc_Guassian_PDF,Lower_Bound,Upper_Bound,Petal_length_Mean,Petal_length_Std,Number_of_trapezoid)\n",
+    "print(f\"Probability of a flower with Petal Length \\nin the range [5.6, 5.7] is Approx.\")\n",
+    "print(Prob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task7: Univariate Analysis\n",
+    "----------------\n",
+    "Lets model the petal length as a univariate continuous Gaussian random variable. What is the probability of seeing a flower with the petal lenght in the range $\\in [5.6,\\; 5.7]$. Recall that a gaussian pdf is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of a flower with Petal Length \n",
+      "in the range [5.6, 5.7] is Approx.\n",
+      "0.012847248561017953\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "Petal_length_Mean = meann\n",
+    "Petal_length_Std = Calc_StandardDeviation(datalist[0],Petal_length_Mean)\n",
+    "Lower_Bound = 5.6\n",
+    "Upper_Bound = 5.7\n",
+    "Number_of_trapezoid = 1000\n",
+    "Prob = Integration_By_Trapezoidal(Calc_Guassian_PDF,Lower_Bound,Upper_Bound,Petal_length_Mean,Petal_length_Std,Number_of_trapezoid)\n",
+    "print(f\"Probability of a flower with Petal Length \\nin the range [5.6, 5.7] is Approx.\")\n",
+    "print(Prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
