--- a/File1.ipynb
+++ b/File1.ipynb
@@ -625,6 +625,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task8: Univariate Analysis\n",
+    "----------------\n",
+    "Lets model the petal length as a univariate continuous Gaussian random variable. What is the relative probability of seeing a flower with the petal length 5.4 to a flower with petal length 3.9."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relative Probability of seeing a flower with Petal Length 5.4 \n",
+      "to a flower with petal length 3.9:\n",
+      "0.654340966940601\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "Probability_Petal_length_54 = Calc_Guassian_PDF(5.4,Petal_length_Mean,Petal_length_Std)\n",
+    "Probability_Petal_length_39 = Calc_Guassian_PDF(3.9,Petal_length_Mean,Petal_length_Std)\n",
+    "Petal_length_Relative_prob = Probability_Petal_length_54 / Probability_Petal_length_39\n",
+    "print('Relative Probability of seeing a flower with Petal Length 5.4 \\nto a flower with petal length 3.9:')\n",
+    "print(Petal_length_Relative_prob)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task9: Univariate Analysis\n",
+    "Write a function to build a histogarm of the given feature vector (list). Your function should receive two arguments a feature vector (a list) and number of bins and return the built histogram. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
