--- a/File1.ipynb
+++ b/File1.ipynb
@@ -658,11 +658,189 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Task9: Univariate Analysis\n",
     "Write a function to build a histogarm of the given feature vector (list). Your function should receive two arguments a feature vector (a list) and number of bins and return the built histogram. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Histogram Bin Ranges:  [(1.0, 1.3933333333333333), (1.3933333333333333, 1.7866666666666666), (1.7866666666666666, 2.18), (2.18, 2.5733333333333333), (2.5733333333333333, 2.966666666666667), (2.966666666666667, 3.3600000000000003), (3.3600000000000003, 3.7533333333333334), (3.7533333333333334, 4.1466666666666665), (4.1466666666666665, 4.540000000000001), (4.540000000000001, 4.933333333333334), (4.933333333333334, 5.326666666666667), (5.326666666666667, 5.720000000000001), (5.720000000000001, 6.113333333333334), (6.113333333333334, 6.506666666666667), (6.506666666666667, 6.9)]\n",
+      "Histogram:  [11, 36, 2, 0, 0, 3, 4, 12, 18, 17, 16, 14, 10, 2, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def buildHistogram(feature_vector, nbins):\n",
+    "    \"\"\" Histogram the feature into number of bins \"\"\"\n",
+    "    #Write your code here \n",
+    "    # Make sure that number of bin are greater than 0\n",
+    "    # Make sure length of feature vector is != 0\n",
+    "    if nbins <= 0 or len(feature_vector) == 0:\n",
+    "        print('Number of Bins must be greater than 0')\n",
+    "        print('Length of Feature vector must be greater than 0')\n",
+    "        return 0\n",
+    "    \n",
+    "    # step two is to find out the Bin Width\n",
+    "    max_number,min_number = max(feature_vector),min(feature_vector)\n",
+    "\n",
+    "    # What is max and min are same because all values are same?\n",
+    "    # Hence we will put a check for that as well\n",
+    "    if max_number == min_number:\n",
+    "        # this will return a histogram with all data\n",
+    "        # coming in first bin of histogram\n",
+    "        histogram = [0] * nbins\n",
+    "        histogram[0] = len(feature_vector)\n",
+    "        return histogram\n",
+    "    \n",
+    "    Range1 = max_number - min_number\n",
+    "    Width_of_Bins = Range1 / nbins\n",
+    "    # this will tell us the range of one interval\n",
+    "    # Now we will make list of Bin Ranges\n",
+    "    # that will look like this\n",
+    "    # bins = [(0,1),(1,2),..]\n",
+    "    # then we will match which value comes in \n",
+    "    # which range of bin\n",
+    "    Hist_Bins = []\n",
+    "    for count in range(nbins):\n",
+    "        # for example if min number == 1 and max == 63\n",
+    "        # width of bin will be 62/10 == 6\n",
+    "        # number of bins are 10\n",
+    "        # then this will give us 1.03 + (0 * 6) = 1.3\n",
+    "        # 1.03 + (1 * 6) = 13\n",
+    "        # print(count,'\\n')\n",
+    "        # print('Min',min_number,'\\n')\n",
+    "        bin_interval_start = min_number + count * Width_of_Bins\n",
+    "        # print('Width: ',Width_of_Bins,'\\n')\n",
+    "        # print(bin_interval_start,'\\n')\n",
+    "        bin_interval_end = min_number + (count + 1) * Width_of_Bins\n",
+    "        # print(bin_interval_end,'\\n')\n",
+    "        Hist_Bins.append((bin_interval_start,bin_interval_end))\n",
+    "        # print('\\n\\n')\n",
+    "        # print()\n",
+    "    count_Bins = [0] * nbins\n",
+    "    for val in feature_vector:\n",
+    "        # finding correct range interval for the value\n",
+    "        for index,(start,end) in enumerate(Hist_Bins):\n",
+    "            if start <= val <= end:\n",
+    "                count_Bins[index] += 1\n",
+    "                break\n",
+    "            else:\n",
+    "                if val==max_number:\n",
+    "                    # increments the count of the last bin\n",
+    "                    count_Bins[-1] += 1\n",
+    "    return Hist_Bins, count_Bins\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "Histogram_Bin_Ranges, Histogram = buildHistogram(datalist[0],15)\n",
+    "print(\"Histogram Bin Ranges: \",Histogram_Bin_Ranges)\n",
+    "print(\"Histogram: \",Histogram)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task10: Univariate Analysis\n",
+    "Write a function that returns a list containing all the four quantile of the given feature vector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantile 1:  1.6\n",
+      "Quantile 2 (Median):  4.4\n",
+      "Quantile 3:  5.1\n",
+      "QUantile 4:  6.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Sort_the_list(mylist):\n",
+    "    length = len(mylist)\n",
+    "    temp = 0\n",
+    "    for i in range(length):\n",
+    "        new_end = length - i - 1\n",
+    "        for j in range(0,new_end):\n",
+    "            if mylist[j] > mylist[j+1]:\n",
+    "                temp = mylist[j]\n",
+    "                mylist[j] = mylist[j+1]\n",
+    "                mylist[j+1] = temp\n",
+    "    return mylist\n",
+    "\n",
+    "def Calc_Median(myList):\n",
+    "    # calculating the length of the list\n",
+    "    list_length = len(myList)\n",
+    "    # extract the middle value\n",
+    "    mid_value = list_length // 2\n",
+    "    # now configure if the list is even or odd\n",
+    "    if list_length % 2 == 0:\n",
+    "        # this means if the list is even\n",
+    "        val1 = myList[mid_value - 1]\n",
+    "        val2 = myList[mid_value]\n",
+    "        summ = val1 + val2\n",
+    "        median = summ / 2\n",
+    "        return median\n",
+    "    else:\n",
+    "        # this means if the list is odd\n",
+    "        median = myList[mid_value]\n",
+    "        return median\n",
+    "\n",
+    "\n",
+    "def getQuantile(features):\n",
+    "    \"\"\" Function returns the four quantile of the given feature vector in a list \"\"\"    \n",
+    "    quartile=[0]*4\n",
+    "    #Write your code here  \n",
+    "    # quartile[0] = q1 Lower Half\n",
+    "    # quartile[1] = q2 Median\n",
+    "    # quartile[2] = q3 Upper Half\n",
+    "    # quartile[3] = q4 MAx\n",
+    "    # sorting the features array\n",
+    "    features = Sort_the_list(features)\n",
+    "    # if features length == 8\n",
+    "    # lowesthalf will give approx of data which lies in 4th range\n",
+    "    lowesthalf = len(features) // 2\n",
+    "    data_to_in_q1 = features[:lowesthalf]\n",
+    "    quartile[0] = Calc_Median(data_to_in_q1)\n",
+    "    quartile[1] = Calc_Median(features)\n",
+    "    if len(features) % 2 == 0:\n",
+    "        data_in_UpperHalf = features[lowesthalf:]\n",
+    "    else:\n",
+    "        data_in_UpperHalf = features[lowesthalf+1:]\n",
+    "    quartile[2] = Calc_Median(data_in_UpperHalf)\n",
+    "    quartile[3] = max(features)\n",
+    "    return quartile\n",
+    "\n",
+    "\n",
+    "# Getting Quantiles of Petal Length\n",
+    "q1, q2, q3, q4 = getQuantile(datalist[0])\n",
+    "print('Quantile 1: ',q1)\n",
+    "print('Quantile 2 (Median): ',q2)\n",
+    "print('Quantile 3: ',q3)\n",
+    "print('QUantile 4: ',q4)"
    ]
   },
   {
