--- a/File1.ipynb
+++ b/File1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -850,6 +850,122 @@
     "#### Task11: Univariate Analysis\n",
     "Find the outliers in the features petal length and width. Comment on how you have decided on the features which are outliers."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outliers in Petal Length: []\n",
+      "Outliers in Petal Width: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here  \n",
+    "def Figure_Outliers(my_list_01):\n",
+    "    \"\"\" This function identifies Outliers Using Inter-Quartile Range \"\"\"\n",
+    "    Q_1, Q_2, Q_3, Q_4 = getQuantile(my_list_01)\n",
+    "    inter_quartile_range = Q_3 - Q_1\n",
+    "    lowerbound = Q_1 - 1.5 * inter_quartile_range\n",
+    "    upperbound = Q_3 + 1.5 * inter_quartile_range\n",
+    "    Outliers = []\n",
+    "    for value in my_list_01:\n",
+    "        if value < lowerbound or value > upperbound:\n",
+    "            Outliers.append(value)\n",
+    "    return Outliers\n",
+    "    \n",
+    "    \n",
+    "Petal_Length_Outlier = Figure_Outliers(datalist[0])\n",
+    "Petal_width_Outlier = Figure_Outliers(datalist[1])\n",
+    "print(f'Outliers in Petal Length: {Petal_Length_Outlier}')\n",
+    "print(f'Outliers in Petal Width: {Petal_width_Outlier}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task12: Multivariate Analysis\n",
+    "Lets model the petal length and width as a bivariate Bernoulli random variable by categorizing the petal length (< 4.9cm) and petal width as short(< 1.6cm) and vice versa. Suppose that petal length is represented by random variable $x$ and petal width by random variable $y$. Now write the code for finding the probability of following cases:\n",
+    "$$P(x=0, y=0)= ?$$\n",
+    "$$P(x=0, y=1)= ?$$\n",
+    "$$P(x=1, y=0)= ?$$\n",
+    "$$P(x=1, y=1)= ?$$\n",
+    "\n",
+    "Here $x=0$ represent the flowers with short petal length and $x=1$ represent the flower with long petal length..\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of Short Petal Length and Width: 0.6510067114093959\n",
+      "Probability of Short Petal Length and Long Width: 0.006711409395973154\n",
+      "Probability of Long Petal Length and Short Width: 0.0\n",
+      "Probability of Long Petal Length and Width: 0.3422818791946309\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here  \n",
+    "Petal_Length_Short_or_Long = []\n",
+    "Petal_Width_Short_or_Long = []\n",
+    "# working for petal lengths\n",
+    "for val in datalist[0]:\n",
+    "    if val < 4.9:\n",
+    "        # 0 means short\n",
+    "        Petal_Length_Short_or_Long.append(0)\n",
+    "    if val >= 4.9:\n",
+    "        #  1 means long\n",
+    "        Petal_Length_Short_or_Long.append(1)\n",
+    "\n",
+    "for val2 in datalist[1]:\n",
+    "    if val2 < 1.6:\n",
+    "        # 0 means short\n",
+    "        Petal_Width_Short_or_Long.append(0)\n",
+    "    if val2>= 1.6:\n",
+    "        # 1 means long\n",
+    "        Petal_Width_Short_or_Long.append(1)\n",
+    "        \n",
+    "extracted_counts_of_each_category = {\n",
+    "    (0 , 0): 0,\n",
+    "    (0 , 1): 0,\n",
+    "    (1 , 0): 0,\n",
+    "    (1 , 1): 0\n",
+    "}\n",
+    "for petal_length,petal_width in zip(Petal_Length_Short_or_Long,Petal_Width_Short_or_Long):\n",
+    "    # this will increase the count for each combination of 0's and 1's\n",
+    "    extracted_counts_of_each_category[(petal_length,petal_width)] += 1\n",
+    "# now divide number of occurences of each category with total number of entries in the list\n",
+    "prob_00 = extracted_counts_of_each_category[(0 , 0)] / len(datalist[0])\n",
+    "prob_01 = extracted_counts_of_each_category[(0 , 1)] / len(datalist[0])\n",
+    "prob_10 = extracted_counts_of_each_category[(1 , 0)] / len(datalist[0])\n",
+    "prob_11 = extracted_counts_of_each_category[(1 , 1)] / len(datalist[0])\n",
+    "\n",
+    "print(f'Probability of Short Petal Length and Width: {prob_00}')\n",
+    "print(f'Probability of Short Petal Length and Long Width: {prob_01}')\n",
+    "print(f'Probability of Long Petal Length and Short Width: {prob_10}')\n",
+    "print(f'Probability of Long Petal Length and Width: {prob_11}')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
