--- a/File1.ipynb
+++ b/File1.ipynb
@@ -961,11 +961,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Task13: Multivariate Analysis\n",
+    "What will be probability of seeing of flower with long petal length ? Find the result using marginalization principle."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of seeing flower with long Petal Length using Marginalization Principle: \n",
+      "0.3423\n"
+     ]
+    }
+   ],
+   "source": [
+    "#P(x = 1, y = 0) + P(x = 1, y = 1)\n",
+    "marginal_prob = prob_10 + prob_11\n",
+    "print(f'Probability of seeing flower with long Petal Length using Marginalization Principle: ')\n",
+    "print(f'{marginal_prob:.4f}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task14: Multivariate Analysis\n",
+    "Lets model the sepal length, sepal width, petal length and width as a multivariate Bernoulli random variable by categorizing the sepal length  as (short< 7.1cm), sepal width (short< 3.1cm), petal length (short< 4.9cm) and petal width (short< 1.6cm) and vice versa. Suppose that all four measures are represented by random variables $x_1, x_2, x_3, x_4$ respectively. Now write the code for finding the probability of the following cases:\n",
+    "$$p(x_1=1, x_2=1, x_3=0, x_4=1)$$\n",
+    "$$p(x_1=0, x_2=1, x_3=0, x_4=1)$$\n",
+    "$$p(x_1=0, x_2=0, x_3=0, x_4=1)$$\n",
+    "$$p(x_1=1, x_2=1, x_3=1, x_4=1)$$\n",
+    "\n",
+    "Here $x_i=0$ represent the flowers with short featuers and $x_i=1$ represent the flower with long feature.\n"
+   ]
   },
   {
    "cell_type": "code",
