--- a/File1.ipynb
+++ b/File1.ipynb
@@ -1006,6 +1006,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x1=1, x2=1, x3=0, x4=1): 0.0000\n",
+      "P(x1=0, x2=1, x3=0, x4=1): 0.0000\n",
+      "P(x1=0, x2=0, x3=0, x4=1): 0.0067\n",
+      "P(x1=1, x2=1, x3=1, x4=1): 0.0268\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your code here\n",
+    "datalist.append(list(data['SepalLength'].dropna()))\n",
+    "datalist.append(list(data['SepalWidth'].dropna()))\n",
+    "\n",
+    "\n",
+    "Sepal_Length_Short_or_Long = []\n",
+    "Sepal_Width_Short_or_Long = []\n",
+    "\n",
+    "Petal_Len_Short_Long = []\n",
+    "Petal_Wid_Short_Long = []\n",
+    "# Working on Sepal_Length\n",
+    "for value in datalist[2]:\n",
+    "    if value < 7.1:\n",
+    "        # 0 for short\n",
+    "        Sepal_Length_Short_or_Long.append(0)\n",
+    "    else:\n",
+    "        # 1 for long\n",
+    "        Sepal_Length_Short_or_Long.append(1)\n",
+    "        \n",
+    "# Working on Sepal Width\n",
+    "for val in datalist[3]:\n",
+    "    if val < 3.1:\n",
+    "        # 0 for short\n",
+    "        Sepal_Width_Short_or_Long.append(0)\n",
+    "    else:\n",
+    "        # 1 for long\n",
+    "        Sepal_Width_Short_or_Long.append(1)\n",
+    "        \n",
+    "# Working on Petal Length\n",
+    "for val1 in datalist[0]:\n",
+    "    if val1 < 4.9:\n",
+    "        # 0 for short\n",
+    "        Petal_Len_Short_Long.append(0)\n",
+    "    else:\n",
+    "        #  1 for Long\n",
+    "        Petal_Len_Short_Long.append(1)\n",
+    "\n",
+    "for val2 in datalist[1]:\n",
+    "    if val2 < 1.6:\n",
+    "        # 0 for short\n",
+    "        Petal_Wid_Short_Long.append(0)\n",
+    "    else:\n",
+    "        # 1 for long\n",
+    "        Petal_Wid_Short_Long.append(1)\n",
+    "        \n",
+    "# Now that all categorised data lists are ready lets compute\n",
+    "# Probabilities\n",
+    "\n",
+    "extracted_counts_of_each_category2 = {\n",
+    "    # (1 , 1, 0, 1): 0,\n",
+    "    # # Long Sepal Length and Width , Short petal length and long petal width\n",
+    "    # (0 , 1, 0, 1): 0,\n",
+    "    # # Short Sepal Length, Long Sepal Width, Short Petal Length, Long Petal Width\n",
+    "    # (0 , 0, 0, 1): 0, # Short Sepal Length and Width, Short Petal Length and Long Petal Width\n",
+    "    # (1 , 1, 1, 1): 0, # means all long features\n",
+    "    # (0, 0, 0, 0): 0,\n",
+    "    # (0, 1, 0, 0): 0,\n",
+    "    # (1, 0, 0, 0): 0,   \n",
+    "}\n",
+    "for sl,sw,pl,pw in zip(Sepal_Length_Short_or_Long,Sepal_Width_Short_or_Long,Petal_Len_Short_Long,Petal_Wid_Short_Long):\n",
+    "    # extracted_counts_of_each_category2[(sl,sw,pl,pw)] += 1\n",
+    "        extracted_counts_of_each_category2[(sl, sw, pl, pw)] = extracted_counts_of_each_category2.get((sl, sw, pl, pw), 0) + 1\n",
+    "\n",
+    "\n",
+    "prob_1101 = extracted_counts_of_each_category2.get((1,1,0,1),0) / len(datalist[0])\n",
+    "prob_0101 = extracted_counts_of_each_category2.get((0,1,0,1),0) / len(datalist[0])\n",
+    "prob_0001 = extracted_counts_of_each_category2.get((0,0,0,1),0) / len(datalist[0])\n",
+    "prob_1111 = extracted_counts_of_each_category2.get((1,1,1,1),0) / len(datalist[0])\n",
+    "\n",
+    "print(f'P(x1=1, x2=1, x3=0, x4=1): {prob_1101:.4f}')\n",
+    "print(f'P(x1=0, x2=1, x3=0, x4=1): {prob_0101:.4f}')\n",
+    "print(f'P(x1=0, x2=0, x3=0, x4=1): {prob_0001:.4f}')\n",
+    "print(f'P(x1=1, x2=1, x3=1, x4=1): {prob_1111:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
