--- a/File1.ipynb
+++ b/File1.ipynb
@@ -1097,6 +1097,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task15: Multivariate Analysis\n",
+    "Find the following probabilities using marginalization principle:\n",
+    "$$p(x_1=1, x_2=1,  x_4=1)$$\n",
+    "$$p(x_1=0, x_4=1)$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
