--- a/File1.ipynb
+++ b/File1.ipynb
@@ -1108,6 +1108,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(x_1=1, x_2=1, x_4=1): 0.0268\n",
+      "P(x_1=0, x_4=1): 0.2685\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "# Finding first probability \n",
+    "# P(x1=1,x2=1,x4=1)=P(x1=1,x2=1,x3=0,x4=1)+P(x1=1,x2=1,x3=1,x4=1)\n",
+    "n = len(datalist[0])  \n",
+    "prob_111 = (extracted_counts_of_each_category2.get((1, 1, 0, 1), 0) + extracted_counts_of_each_category2.get((1, 1, 1, 1), 0)) / n\n",
+    "# P(x_1=0, x_4=1)\n",
+    "prob11 = (extracted_counts_of_each_category2.get((0, 0, 0, 1), 0) + extracted_counts_of_each_category2.get((0, 0, 1, 1), 0) +\n",
+    "          extracted_counts_of_each_category2.get((0, 1, 0, 1), 0) + extracted_counts_of_each_category2.get((0, 1, 1, 1), 0)) / n\n",
+    "\n",
+    "print(f'P(x_1=1, x_2=1, x_4=1): {prob_111:.4f}')\n",
+    "print(f'P(x_1=0, x_4=1): {prob11:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
