--- a/File2.ipynb
+++ b/File2.ipynb
@@ -90,6 +90,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: (3.7744966442953043, 1.2053691275167793)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "# Making a Function to compute Mean\n",
+    "def compute_mean(features):\n",
+    "    mean_sum = 0\n",
+    "    for value in features:\n",
+    "        mean_sum += value\n",
+    "    Mean = mean_sum / len(features)\n",
+    "    return Mean\n",
+    "\n",
+    "Petal_Length = datalist[0]\n",
+    "Petal_Width = datalist[1]\n",
+    "# Mean of Petal Length\n",
+    "pl_mean = compute_mean(Petal_Length)\n",
+    "# Mean of Petal Width\n",
+    "pw_mean = compute_mean(Petal_Width)\n",
+    "\n",
+    "Mean_Tuple = (pl_mean,pw_mean)\n",
+    "print('Mean:',Mean_Tuple)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task2\n",
+    "----------------\n",
+    "Compute the covariance matrix $X$ using outper product formula, i.e. $\\Sigma=\\frac{1}{n}Z^T\\;Z$, where $Z$ is centered data matrix (mean = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
